--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Global Property Auction</title>
+        {{! <link rel="stylesheet" href="/css/main.css"> }}
     </head>
     <body>
         {{{body}}}
