--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,6 +1,6 @@
 <h1>로그인</h1>
 <br>
-<form method="POST">
+<form method="POST" action="/process/login">
     <table>
         <tr>
             <td><label>아이디</label></td>
