--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,19 +1,26 @@
+{{# if session.user.id }}
+    <h3>{{session.user.id}} 님 환영합니다. </h3>
+    <a href="">MyPage</a>
+    <a href="/process/logout">로그아웃</a>
+    
+{{else}}
+    <h1>로그인</h1>
+    <br>
+    <form method="POST" action="/process/login">
+        <table>
+            <tr>
+                <td><label>아이디</label></td>
+                <td><input type="text" name="id"></td>
+            </tr>
+            <tr>
+                <td><label>비밀번호</label></td>
+                <td><input type="password" name="password"></td>
+            </tr>
+        </table>
+        <input type="submit" value="전송" name="">
+    </form>
+{{/if}}
 
-<h1>로그인</h1>
-<br>
-<form method="POST" action="/process/login">
-    <table>
-        <tr>
-            <td><label>아이디</label></td>
-            <td><input type="text" name="id"></td>
-        </tr>
-        <tr>
-            <td><label>비밀번호</label></td>
-            <td><input type="password" name="password"></td>
-        </tr>
-    </table>
-    <input type="submit" value="전송" name="">
-</form>
 
 
 
