--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
 
     </head>
     <body>
+        <a href="/"><h1>Welcome to Estate Auction</h1></a>
         <script>
         var userAccount;
         
