--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,7 @@
             } else {
                 // 사용자가 metamask를 설치하지 않은 경우에 대해 처리
                 // 사용자들에게 metamask를 설치하라는 등의 메시지
+                alert("메타마스크를 설치하세요.");
             }
             // 
             startApp()
