--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,6 +1,6 @@
 {{# if session.user.id }}
     <h3>{{session.user.id}} 님 환영합니다. </h3>
-    <a href="">MyPage</a>
+    <a href="/mypage">MyPage</a>
     <a href="/process/logout">로그아웃</a>
     
 {{else}}
