--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -21,6 +21,10 @@
                 <td><label>사용자명</label></td>
                 <td><input type="text" name="name"></td>
             </tr>
+            <tr>
+                <td><label>지갑 주소</label></td>
+                <td><input type="text" name="walletAddr"></td>
+            </tr>
         </table>
         <input type="submit" value="전송" name="">
     </form>
